@@ -7,6 +7,8 @@ import com.epam.gym.entity.Training;
 import com.epam.gym.entity.TrainingType;
 import com.epam.gym.entity.User;
 import com.epam.gym.enums.TrainingTypeName;
+import com.epam.gym.exception.AuthenticationException;
+import com.epam.gym.exception.NotFoundException;
 import com.epam.gym.exception.ValidationException;
 import com.epam.gym.metrics.TrainingMetrics;
 import com.epam.gym.repository.TrainingRepository;
@@ -19,33 +21,21 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.ArgumentMatchers.isNull;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@DisplayName("TrainingService Tests")
 class TrainingServiceTest {
 
     @Mock
@@ -72,23 +62,13 @@ class TrainingServiceTest {
     @InjectMocks
     private TrainingService trainingService;
 
-    @Captor
-    private ArgumentCaptor<Training> trainingCaptor;
+    private static final String TRAINEE_USERNAME = "John.Doe";
+    private static final String TRAINER_USERNAME = "Mike.Tyson";
 
-    private User trainerUser;
-    private Trainee testTrainee;
-    private Trainer testTrainer;
-    private TrainingType fitnessType;
-    private TrainingType yogaType;
-    private Training testTraining;
-    private Timer.Sample mockTimerSample;
-
-    private TrainingType createTrainingType(Long id, TrainingTypeName name) {
-        TrainingType type = new TrainingType();
-        ReflectionTestUtils.setField(type, "id", id);
-        ReflectionTestUtils.setField(type, "trainingTypeName", name);
-        return type;
-    }
+    private Trainee trainee;
+    private Trainer trainer;
+    private TrainingType trainingType;
+    private Training training;
 
     @BeforeEach
     void setUp() {
@@ -96,152 +76,214 @@ class TrainingServiceTest {
                 .id(1L)
                 .firstName("John")
                 .lastName("Doe")
-                .username("John.Doe")
-                .password("pass123")
+                .username(TRAINEE_USERNAME)
                 .isActive(true)
                 .build();
 
-        trainerUser = User.builder()
+        User trainerUser = User.builder()
                 .id(2L)
                 .firstName("Mike")
-                .lastName("Trainer")
-                .username("Mike.Trainer")
-                .password("pass456")
+                .lastName("Tyson")
+                .username(TRAINER_USERNAME)
                 .isActive(true)
                 .build();
 
-        fitnessType = createTrainingType(1L, TrainingTypeName.FITNESS);
-        yogaType = createTrainingType(2L, TrainingTypeName.YOGA);
+        trainingType = TrainingType.builder()
+                .id(1L)
+                .trainingTypeName(TrainingTypeName.FITNESS)
+                .build();
 
-        testTrainee = Trainee.builder()
+        trainee = Trainee.builder()
                 .id(1L)
                 .user(traineeUser)
+                .dateOfBirth(LocalDate.of(1995, 5, 15))
+                .address("123 Main St")
                 .trainers(new ArrayList<>())
                 .build();
 
-        testTrainer = Trainer.builder()
+        trainer = Trainer.builder()
                 .id(1L)
                 .user(trainerUser)
-                .specialization(fitnessType)
-                .trainees(new ArrayList<>())
+                .specialization(trainingType)
+                .trainees(List.of())
                 .build();
 
-        testTraining = Training.builder()
+        training = Training.builder()
                 .id(1L)
-                .trainee(testTrainee)
-                .trainer(testTrainer)
-                .trainingName("Morning Fitness")
-                .trainingType(fitnessType)
-                .trainingDate(LocalDate.of(2024, 3, 15))
+                .trainee(trainee)
+                .trainer(trainer)
+                .trainingName("Morning Workout")
+                .trainingType(trainingType)
+                .trainingDate(LocalDate.of(2025, 6, 15))
                 .trainingDurationMinutes(60)
                 .build();
-
-        mockTimerSample = mock(Timer.Sample.class);
     }
 
+    // ==================== CREATE TRAINING TESTS ====================
+
     @Nested
-    @DisplayName("createTraining Tests")
+    @DisplayName("Create Training Tests")
     class CreateTrainingTests {
+
+        private AddTrainingRequest request;
+
+        @BeforeEach
+        void setUp() {
+            request = new AddTrainingRequest();
+            request.setTraineeUsername(TRAINEE_USERNAME);
+            request.setTrainerUsername(TRAINER_USERNAME);
+            request.setTrainingName("Morning Workout");
+            request.setTrainingDate(LocalDate.of(2025, 6, 15));
+            request.setTrainingDuration(60);
+        }
 
         @Test
         @DisplayName("Should create training successfully")
         void createTraining_Success() {
             // Given
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("Morning Fitness")
-                    .trainingDate(LocalDate.of(2024, 3, 15))
-                    .trainingDuration(60)
-                    .build();
+            Timer.Sample timerSample = mock(Timer.Sample.class);
 
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(testTrainer);
+            when(trainingMetrics.startTimer()).thenReturn(timerSample);
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            when(traineeService.getByUsername(TRAINEE_USERNAME)).thenReturn(trainee);
+            when(trainerService.getByUsername(TRAINER_USERNAME)).thenReturn(trainer);
             when(validator.validate(any(Training.class))).thenReturn(Collections.emptySet());
-            when(trainingRepository.save(any(Training.class))).thenReturn(testTraining);
+            when(trainingRepository.save(any(Training.class))).thenReturn(training);
 
             // When
             trainingService.createTraining(request);
 
             // Then
-            verify(userService).isAuthenticated("John.Doe");
-            verify(traineeService).getByUsername("John.Doe");
-            verify(trainerService).getByUsername("Mike.Trainer");
+            verify(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            verify(traineeService).getByUsername(TRAINEE_USERNAME);
+            verify(trainerService).getByUsername(TRAINER_USERNAME);
             verify(validator).validate(any(Training.class));
-            verify(trainingRepository).save(trainingCaptor.capture());
+            verify(trainingRepository).save(any(Training.class));
             verify(trainingMetrics).startTimer();
-            verify(trainingMetrics).stopTimer(mockTimerSample);
+            verify(trainingMetrics).stopTimer(timerSample);
             verify(trainingMetrics).incrementCreated();
-
-            Training captured = trainingCaptor.getValue();
-            assertThat(captured.getTrainee()).isEqualTo(testTrainee);
-            assertThat(captured.getTrainer()).isEqualTo(testTrainer);
-            assertThat(captured.getTrainingName()).isEqualTo("Morning Fitness");
-            assertThat(captured.getTrainingType()).isEqualTo(fitnessType);
-            assertThat(captured.getTrainingDate()).isEqualTo(LocalDate.of(2024, 3, 15));
-            assertThat(captured.getTrainingDurationMinutes()).isEqualTo(60);
         }
 
         @Test
         @DisplayName("Should use trainer's specialization as training type")
         void createTraining_UsesTrainerSpecialization() {
             // Given
-            Trainer yogaTrainer = Trainer.builder()
-                    .id(2L)
-                    .user(trainerUser)
-                    .specialization(yogaType)
-                    .build();
-
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("Yoga Session")
-                    .trainingDate(LocalDate.now())
-                    .trainingDuration(90)
-                    .build();
-
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(yogaTrainer);
+            Timer.Sample timerSample = mock(Timer.Sample.class);
+            when(trainingMetrics.startTimer()).thenReturn(timerSample);
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            when(traineeService.getByUsername(TRAINEE_USERNAME)).thenReturn(trainee);
+            when(trainerService.getByUsername(TRAINER_USERNAME)).thenReturn(trainer);
             when(validator.validate(any(Training.class))).thenReturn(Collections.emptySet());
-            when(trainingRepository.save(any(Training.class))).thenReturn(testTraining);
+            when(trainingRepository.save(any(Training.class))).thenAnswer(invocation -> {
+                Training saved = invocation.getArgument(0);
+                assertThat(saved.getTrainingType()).isEqualTo(trainingType);
+                assertThat(saved.getTrainingType().getTrainingTypeName())
+                        .isEqualTo(TrainingTypeName.FITNESS);
+                return saved;
+            });
 
             // When
             trainingService.createTraining(request);
 
             // Then
-            verify(trainingRepository).save(trainingCaptor.capture());
-            Training captured = trainingCaptor.getValue();
-            assertThat(captured.getTrainingType()).isEqualTo(yogaType);
+            verify(trainingRepository).save(any(Training.class));
+        }
+
+        @Test
+        @DisplayName("Should set all fields from request")
+        void createTraining_SetsAllFields() {
+            // Given
+            Timer.Sample timerSample = mock(Timer.Sample.class);
+            when(trainingMetrics.startTimer()).thenReturn(timerSample);
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            when(traineeService.getByUsername(TRAINEE_USERNAME)).thenReturn(trainee);
+            when(trainerService.getByUsername(TRAINER_USERNAME)).thenReturn(trainer);
+            when(validator.validate(any(Training.class))).thenReturn(Collections.emptySet());
+            when(trainingRepository.save(any(Training.class))).thenAnswer(invocation -> {
+                Training saved = invocation.getArgument(0);
+                assertThat(saved.getTrainee()).isEqualTo(trainee);
+                assertThat(saved.getTrainer()).isEqualTo(trainer);
+                assertThat(saved.getTrainingName()).isEqualTo("Morning Workout");
+                assertThat(saved.getTrainingDate()).isEqualTo(LocalDate.of(2025, 6, 15));
+                assertThat(saved.getTrainingDurationMinutes()).isEqualTo(60);
+                return saved;
+            });
+
+            // When
+            trainingService.createTraining(request);
+
+            // Then
+            verify(trainingRepository).save(any(Training.class));
+        }
+
+        @Test
+        @DisplayName("Should throw AuthenticationException when not resource owner")
+        void createTraining_NotOwner_ThrowsAuthException() {
+            // Given
+            Timer.Sample timerSample = mock(Timer.Sample.class);
+            when(trainingMetrics.startTimer()).thenReturn(timerSample);
+            doThrow(new AuthenticationException("Access denied"))
+                    .when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+
+            // When & Then
+            assertThatThrownBy(() -> trainingService.createTraining(request))
+                    .isInstanceOf(AuthenticationException.class);
+
+            verify(traineeService, never()).getByUsername(anyString());
+            verify(trainingRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("Should throw NotFoundException when trainee not found")
+        void createTraining_TraineeNotFound_ThrowsNotFoundException() {
+            // Given
+            Timer.Sample timerSample = mock(Timer.Sample.class);
+            when(trainingMetrics.startTimer()).thenReturn(timerSample);
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            when(traineeService.getByUsername(TRAINEE_USERNAME))
+                    .thenThrow(new NotFoundException("Trainee not found: " + TRAINEE_USERNAME));
+
+            // When & Then
+            assertThatThrownBy(() -> trainingService.createTraining(request))
+                    .isInstanceOf(NotFoundException.class)
+                    .hasMessageContaining("Trainee not found");
+
+            verify(trainingRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("Should throw NotFoundException when trainer not found")
+        void createTraining_TrainerNotFound_ThrowsNotFoundException() {
+            // Given
+            Timer.Sample timerSample = mock(Timer.Sample.class);
+            when(trainingMetrics.startTimer()).thenReturn(timerSample);
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            when(traineeService.getByUsername(TRAINEE_USERNAME)).thenReturn(trainee);
+            when(trainerService.getByUsername(TRAINER_USERNAME))
+                    .thenThrow(new NotFoundException("Trainer not found: " + TRAINER_USERNAME));
+
+            // When & Then
+            assertThatThrownBy(() -> trainingService.createTraining(request))
+                    .isInstanceOf(NotFoundException.class)
+                    .hasMessageContaining("Trainer not found");
+
+            verify(trainingRepository, never()).save(any());
         }
 
         @Test
         @DisplayName("Should throw ValidationException when validation fails")
-        void createTraining_ValidationFails() {
+        void createTraining_ValidationFails_ThrowsValidationException() {
             // Given
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("")
-                    .trainingDate(LocalDate.now())
-                    .trainingDuration(0)
-                    .build();
-
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(testTrainer);
+            Timer.Sample timerSample = mock(Timer.Sample.class);
+            when(trainingMetrics.startTimer()).thenReturn(timerSample);
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            when(traineeService.getByUsername(TRAINEE_USERNAME)).thenReturn(trainee);
+            when(trainerService.getByUsername(TRAINER_USERNAME)).thenReturn(trainer);
 
             @SuppressWarnings("unchecked")
             ConstraintViolation<Training> violation = mock(ConstraintViolation.class);
             when(violation.getMessage()).thenReturn("Training name is required");
-
-            Set<ConstraintViolation<Training>> violations = new HashSet<>();
-            violations.add(violation);
-            when(validator.validate(any(Training.class))).thenReturn(violations);
+            when(validator.validate(any(Training.class))).thenReturn(Set.of(violation));
 
             // When & Then
             assertThatThrownBy(() -> trainingService.createTraining(request))
@@ -250,136 +292,96 @@ class TrainingServiceTest {
                     .hasMessageContaining("Training name is required");
 
             verify(trainingRepository, never()).save(any());
-            verify(trainingMetrics, never()).stopTimer(any());
             verify(trainingMetrics, never()).incrementCreated();
         }
 
         @Test
-        @DisplayName("Should throw ValidationException with multiple errors")
-        void createTraining_MultipleValidationErrors() {
+        @DisplayName("Should record metrics on successful creation")
+        void createTraining_RecordsMetrics() {
             // Given
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("")
-                    .trainingDate(null)
-                    .trainingDuration(-1)
-                    .build();
-
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(testTrainer);
-
-            @SuppressWarnings("unchecked")
-            ConstraintViolation<Training> violation1 = mock(ConstraintViolation.class);
-            @SuppressWarnings("unchecked")
-            ConstraintViolation<Training> violation2 = mock(ConstraintViolation.class);
-            when(violation1.getMessage()).thenReturn("Name required");
-            when(violation2.getMessage()).thenReturn("Date required");
-
-            Set<ConstraintViolation<Training>> violations = new HashSet<>();
-            violations.add(violation1);
-            violations.add(violation2);
-            when(validator.validate(any(Training.class))).thenReturn(violations);
-
-            // When & Then
-            assertThatThrownBy(() -> trainingService.createTraining(request))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Training validation failed");
-
-            verify(trainingRepository, never()).save(any());
-        }
-
-        @Test
-        @DisplayName("Should authenticate user before creating training")
-        void createTraining_AuthenticatesFirst() {
-            // Given
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("Test Training")
-                    .trainingDate(LocalDate.now())
-                    .trainingDuration(60)
-                    .build();
-
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(testTrainer);
+            Timer.Sample timerSample = mock(Timer.Sample.class);
+            when(trainingMetrics.startTimer()).thenReturn(timerSample);
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            when(traineeService.getByUsername(TRAINEE_USERNAME)).thenReturn(trainee);
+            when(trainerService.getByUsername(TRAINER_USERNAME)).thenReturn(trainer);
             when(validator.validate(any(Training.class))).thenReturn(Collections.emptySet());
-            when(trainingRepository.save(any(Training.class))).thenReturn(testTraining);
+            when(trainingRepository.save(any(Training.class))).thenReturn(training);
 
             // When
             trainingService.createTraining(request);
 
             // Then
-            verify(userService).isAuthenticated("John.Doe");
+            verify(trainingMetrics).startTimer();
+            verify(trainingMetrics).stopTimer(timerSample);
+            verify(trainingMetrics).incrementCreated();
         }
     }
 
+    // ==================== GET TRAINEE TRAININGS BY CRITERIA TESTS ====================
+
     @Nested
-    @DisplayName("getTraineeTrainingsByCriteria Tests")
+    @DisplayName("Get Trainee Trainings By Criteria Tests")
     class GetTraineeTrainingsByCriteriaTests {
 
         @Test
-        @DisplayName("Should return all trainings for trainee")
-        void getTraineeTrainings_Success() {
+        @DisplayName("Should get trainee trainings without filters")
+        void getTraineeTrainings_NoFilters_Success() {
             // Given
-            List<Training> trainings = List.of(testTraining);
+            List<Training> trainings = List.of(training);
 
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    TRAINEE_USERNAME, null, null, null))
+                    .thenReturn(new ArrayList<>(trainings));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, null, null);
+                    TRAINEE_USERNAME, null, null, null, null);
 
             // Then
             assertThat(result).hasSize(1);
-            assertThat(result.getFirst()).isEqualTo(testTraining);
-            verify(userService).isAuthenticated("John.Doe");
+            assertThat(result.getFirst().getTrainingName()).isEqualTo("Morning Workout");
+
+            verify(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            verify(trainingRepository).findTrainingsWithAllUsers(
+                    TRAINEE_USERNAME, null, null, null);
         }
 
         @Test
         @DisplayName("Should filter by date range")
-        void getTraineeTrainings_FilterByDateRange() {
+        void getTraineeTrainings_WithDateRange_Success() {
             // Given
-            LocalDate fromDate = LocalDate.of(2024, 3, 1);
-            LocalDate toDate = LocalDate.of(2024, 3, 31);
-            List<Training> trainings = List.of(testTraining);
+            LocalDate fromDate = LocalDate.of(2025, 1, 1);
+            LocalDate toDate = LocalDate.of(2025, 12, 31);
 
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), eq(fromDate), eq(toDate)))
-                    .thenReturn(trainings);
+                    TRAINEE_USERNAME, null, fromDate, toDate))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", fromDate, toDate, null, null);
+                    TRAINEE_USERNAME, fromDate, toDate, null, null);
 
             // Then
             assertThat(result).hasSize(1);
+
             verify(trainingRepository).findTrainingsWithAllUsers(
-                    "John.Doe", null, fromDate, toDate);
+                    TRAINEE_USERNAME, null, fromDate, toDate);
         }
 
         @Test
         @DisplayName("Should filter by trainer name - first name match")
-        void getTraineeTrainings_FilterByTrainerFirstName() {
+        void getTraineeTrainings_FilterByTrainerFirstName_Success() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, "Mike", null);
+                    TRAINEE_USERNAME, null, null, "Mike", null);
 
             // Then
             assertThat(result).hasSize(1);
@@ -387,18 +389,16 @@ class TrainingServiceTest {
 
         @Test
         @DisplayName("Should filter by trainer name - last name match")
-        void getTraineeTrainings_FilterByTrainerLastName() {
+        void getTraineeTrainings_FilterByTrainerLastName_Success() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, "Trainer", null);
+                    TRAINEE_USERNAME, null, null, "Tyson", null);
 
             // Then
             assertThat(result).hasSize(1);
@@ -408,16 +408,14 @@ class TrainingServiceTest {
         @DisplayName("Should filter by trainer name - case insensitive")
         void getTraineeTrainings_FilterByTrainerName_CaseInsensitive() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, "MIKE", null);
+                    TRAINEE_USERNAME, null, null, "mike", null);
 
             // Then
             assertThat(result).hasSize(1);
@@ -427,35 +425,48 @@ class TrainingServiceTest {
         @DisplayName("Should filter by trainer name - no match")
         void getTraineeTrainings_FilterByTrainerName_NoMatch() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, "Unknown", null);
+                    TRAINEE_USERNAME, null, null, "NonExistent", null);
 
             // Then
             assertThat(result).isEmpty();
         }
 
         @Test
-        @DisplayName("Should filter by training type")
-        void getTraineeTrainings_FilterByTrainingType() {
+        @DisplayName("Should skip trainer name filter when blank")
+        void getTraineeTrainings_BlankTrainerName_SkipsFilter() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, null, TrainingTypeName.FITNESS);
+                    TRAINEE_USERNAME, null, null, "   ", null);
+
+            // Then
+            assertThat(result).hasSize(1);
+        }
+
+        @Test
+        @DisplayName("Should filter by training type")
+        void getTraineeTrainings_FilterByTrainingType_Success() {
+            // Given
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+            when(trainingRepository.findTrainingsWithAllUsers(
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
+
+            // When
+            List<Training> result = trainingService.getTraineeTrainingsByCriteria(
+                    TRAINEE_USERNAME, null, null, null, TrainingTypeName.FITNESS);
 
             // Then
             assertThat(result).hasSize(1);
@@ -465,143 +476,149 @@ class TrainingServiceTest {
         @DisplayName("Should filter by training type - no match")
         void getTraineeTrainings_FilterByTrainingType_NoMatch() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, null, TrainingTypeName.YOGA);
+                    TRAINEE_USERNAME, null, null, null, TrainingTypeName.YOGA);
 
             // Then
             assertThat(result).isEmpty();
         }
 
         @Test
-        @DisplayName("Should combine multiple filters")
-        void getTraineeTrainings_CombineFilters() {
+        @DisplayName("Should apply both trainer name and training type filters")
+        void getTraineeTrainings_BothFilters_Success() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), any(), any()))
-                    .thenReturn(trainings);
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe",
-                    LocalDate.of(2024, 3, 1),
-                    LocalDate.of(2024, 3, 31),
-                    "Mike",
-                    TrainingTypeName.FITNESS);
+                    TRAINEE_USERNAME, null, null, "Mike", TrainingTypeName.FITNESS);
 
             // Then
             assertThat(result).hasSize(1);
         }
 
         @Test
-        @DisplayName("Should return empty list when no trainings")
-        void getTraineeTrainings_EmptyList() {
+        @DisplayName("Should return empty when both filters don't match")
+        void getTraineeTrainings_BothFiltersDontMatch_ReturnsEmpty() {
             // Given
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(Collections.emptyList());
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, null, null);
+                    TRAINEE_USERNAME, null, null, "Mike", TrainingTypeName.YOGA);
 
             // Then
             assertThat(result).isEmpty();
         }
 
         @Test
-        @DisplayName("Should skip trainer name filter when blank")
-        void getTraineeTrainings_BlankTrainerName() {
+        @DisplayName("Should return empty list when no trainings found")
+        void getTraineeTrainings_NoTrainings_ReturnsEmptyList() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
+            doNothing().when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    eq(TRAINEE_USERNAME), isNull(), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>());
 
             // When
             List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, "   ", null);
+                    TRAINEE_USERNAME, null, null, null, null);
 
             // Then
-            assertThat(result).hasSize(1);
+            assertThat(result).isEmpty();
+        }
+
+        @Test
+        @DisplayName("Should throw AuthenticationException when not resource owner")
+        void getTraineeTrainings_NotOwner_ThrowsAuthException() {
+            // Given
+            doThrow(new AuthenticationException("Access denied"))
+                    .when(userService).verifyResourceOwnership(TRAINEE_USERNAME);
+
+            // When & Then
+            assertThatThrownBy(() -> trainingService.getTraineeTrainingsByCriteria(
+                    TRAINEE_USERNAME, null, null, null, null))
+                    .isInstanceOf(AuthenticationException.class);
+
+            verify(trainingRepository, never()).findTrainingsWithAllUsers(
+                    anyString(), any(), any(), any());
         }
     }
 
+    // ==================== GET TRAINER TRAININGS BY CRITERIA TESTS ====================
+
     @Nested
-    @DisplayName("getTrainerTrainingsByCriteria Tests")
+    @DisplayName("Get Trainer Trainings By Criteria Tests")
     class GetTrainerTrainingsByCriteriaTests {
 
         @Test
-        @DisplayName("Should return all trainings for trainer")
-        void getTrainerTrainings_Success() {
+        @DisplayName("Should get trainer trainings without filters")
+        void getTrainerTrainings_NoFilters_Success() {
             // Given
-            List<Training> trainings = List.of(testTraining);
-
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
+            doNothing().when(userService).verifyResourceOwnership(TRAINER_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    isNull(), eq("Mike.Trainer"), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    null, TRAINER_USERNAME, null, null))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer", null, null, null);
+                    TRAINER_USERNAME, null, null, null);
 
             // Then
             assertThat(result).hasSize(1);
-            assertThat(result.getFirst()).isEqualTo(testTraining);
-            verify(userService).isAuthenticated("Mike.Trainer");
+
+            verify(userService).verifyResourceOwnership(TRAINER_USERNAME);
+            verify(trainingRepository).findTrainingsWithAllUsers(
+                    null, TRAINER_USERNAME, null, null);
         }
 
         @Test
         @DisplayName("Should filter by date range")
-        void getTrainerTrainings_FilterByDateRange() {
+        void getTrainerTrainings_WithDateRange_Success() {
             // Given
-            LocalDate fromDate = LocalDate.of(2024, 3, 1);
-            LocalDate toDate = LocalDate.of(2024, 3, 31);
-            List<Training> trainings = List.of(testTraining);
+            LocalDate fromDate = LocalDate.of(2025, 1, 1);
+            LocalDate toDate = LocalDate.of(2025, 12, 31);
 
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
+            doNothing().when(userService).verifyResourceOwnership(TRAINER_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    isNull(), eq("Mike.Trainer"), eq(fromDate), eq(toDate)))
-                    .thenReturn(trainings);
+                    null, TRAINER_USERNAME, fromDate, toDate))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer", fromDate, toDate, null);
+                    TRAINER_USERNAME, fromDate, toDate, null);
 
             // Then
             assertThat(result).hasSize(1);
+
             verify(trainingRepository).findTrainingsWithAllUsers(
-                    null, "Mike.Trainer", fromDate, toDate);
+                    null, TRAINER_USERNAME, fromDate, toDate);
         }
 
         @Test
         @DisplayName("Should filter by trainee name - first name match")
-        void getTrainerTrainings_FilterByTraineeFirstName() {
+        void getTrainerTrainings_FilterByTraineeFirstName_Success() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
+            doNothing().when(userService).verifyResourceOwnership(TRAINER_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    isNull(), eq("Mike.Trainer"), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    isNull(), eq(TRAINER_USERNAME), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer", null, null, "John");
+                    TRAINER_USERNAME, null, null, "John");
 
             // Then
             assertThat(result).hasSize(1);
@@ -609,18 +626,16 @@ class TrainingServiceTest {
 
         @Test
         @DisplayName("Should filter by trainee name - last name match")
-        void getTrainerTrainings_FilterByTraineeLastName() {
+        void getTrainerTrainings_FilterByTraineeLastName_Success() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
+            doNothing().when(userService).verifyResourceOwnership(TRAINER_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    isNull(), eq("Mike.Trainer"), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    isNull(), eq(TRAINER_USERNAME), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer", null, null, "Doe");
+                    TRAINER_USERNAME, null, null, "Doe");
 
             // Then
             assertThat(result).hasSize(1);
@@ -630,16 +645,14 @@ class TrainingServiceTest {
         @DisplayName("Should filter by trainee name - case insensitive")
         void getTrainerTrainings_FilterByTraineeName_CaseInsensitive() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
+            doNothing().when(userService).verifyResourceOwnership(TRAINER_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    isNull(), eq("Mike.Trainer"), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    isNull(), eq(TRAINER_USERNAME), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer", null, null, "JOHN");
+                    TRAINER_USERNAME, null, null, "john");
 
             // Then
             assertThat(result).hasSize(1);
@@ -649,33 +662,14 @@ class TrainingServiceTest {
         @DisplayName("Should filter by trainee name - no match")
         void getTrainerTrainings_FilterByTraineeName_NoMatch() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
+            doNothing().when(userService).verifyResourceOwnership(TRAINER_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    isNull(), eq("Mike.Trainer"), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    isNull(), eq(TRAINER_USERNAME), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer", null, null, "Unknown");
-
-            // Then
-            assertThat(result).isEmpty();
-        }
-
-        @Test
-        @DisplayName("Should return empty list when no trainings")
-        void getTrainerTrainings_EmptyList() {
-            // Given
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
-            when(trainingRepository.findTrainingsWithAllUsers(
-                    isNull(), eq("Mike.Trainer"), isNull(), isNull()))
-                    .thenReturn(Collections.emptyList());
-
-            // When
-            List<Training> result = trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer", null, null, null);
+                    TRAINER_USERNAME, null, null, "NonExistent");
 
             // Then
             assertThat(result).isEmpty();
@@ -683,71 +677,90 @@ class TrainingServiceTest {
 
         @Test
         @DisplayName("Should skip trainee name filter when blank")
-        void getTrainerTrainings_BlankTraineeName() {
+        void getTrainerTrainings_BlankTraineeName_SkipsFilter() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
+            doNothing().when(userService).verifyResourceOwnership(TRAINER_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    isNull(), eq("Mike.Trainer"), isNull(), isNull()))
-                    .thenReturn(trainings);
+                    isNull(), eq(TRAINER_USERNAME), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>(List.of(training)));
 
             // When
             List<Training> result = trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer", null, null, "   ");
+                    TRAINER_USERNAME, null, null, "   ");
 
             // Then
             assertThat(result).hasSize(1);
         }
 
         @Test
-        @DisplayName("Should combine date and trainee name filters")
-        void getTrainerTrainings_CombineFilters() {
+        @DisplayName("Should return empty list when no trainings found")
+        void getTrainerTrainings_NoTrainings_ReturnsEmptyList() {
             // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
+            doNothing().when(userService).verifyResourceOwnership(TRAINER_USERNAME);
             when(trainingRepository.findTrainingsWithAllUsers(
-                    isNull(), eq("Mike.Trainer"), any(), any()))
-                    .thenReturn(trainings);
+                    isNull(), eq(TRAINER_USERNAME), isNull(), isNull()))
+                    .thenReturn(new ArrayList<>());
 
             // When
             List<Training> result = trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer",
-                    LocalDate.of(2024, 3, 1),
-                    LocalDate.of(2024, 3, 31),
-                    "John");
+                    TRAINER_USERNAME, null, null, null);
 
             // Then
-            assertThat(result).hasSize(1);
+            assertThat(result).isEmpty();
+        }
+
+        @Test
+        @DisplayName("Should throw AuthenticationException when not resource owner")
+        void getTrainerTrainings_NotOwner_ThrowsAuthException() {
+            // Given
+            doThrow(new AuthenticationException("Access denied"))
+                    .when(userService).verifyResourceOwnership(TRAINER_USERNAME);
+
+            // When & Then
+            assertThatThrownBy(() -> trainingService.getTrainerTrainingsByCriteria(
+                    TRAINER_USERNAME, null, null, null))
+                    .isInstanceOf(AuthenticationException.class);
+
+            verify(trainingRepository, never()).findTrainingsWithAllUsers(
+                    any(), anyString(), any(), any());
         }
     }
 
+    // ==================== GET ALL TRAINING TYPES TESTS ====================
+
     @Nested
-    @DisplayName("getAllTrainingTypes Tests")
+    @DisplayName("Get All Training Types Tests")
     class GetAllTrainingTypesTests {
 
         @Test
-        @DisplayName("Should return all training types")
+        @DisplayName("Should get all training types successfully")
         void getAllTrainingTypes_Success() {
             // Given
-            List<TrainingType> types = List.of(fitnessType, yogaType);
-            when(trainingTypeRepository.findAll()).thenReturn(types);
+            List<TrainingType> trainingTypes = List.of(
+                    TrainingType.builder().id(1L).trainingTypeName(TrainingTypeName.FITNESS).build(),
+                    TrainingType.builder().id(2L).trainingTypeName(TrainingTypeName.YOGA).build(),
+                    TrainingType.builder().id(3L).trainingTypeName(TrainingTypeName.ZUMBA).build()
+            );
+
+            when(trainingTypeRepository.findAll()).thenReturn(trainingTypes);
 
             // When
             List<TrainingType> result = trainingService.getAllTrainingTypes();
 
             // Then
-            assertThat(result).hasSize(2);
-            assertThat(result).containsExactlyInAnyOrder(fitnessType, yogaType);
+            assertThat(result).hasSize(3);
+            assertThat(result.get(0).getTrainingTypeName()).isEqualTo(TrainingTypeName.FITNESS);
+            assertThat(result.get(1).getTrainingTypeName()).isEqualTo(TrainingTypeName.YOGA);
+            assertThat(result.get(2).getTrainingTypeName()).isEqualTo(TrainingTypeName.ZUMBA);
+
             verify(trainingTypeRepository).findAll();
         }
 
         @Test
         @DisplayName("Should return empty list when no training types")
-        void getAllTrainingTypes_EmptyList() {
+        void getAllTrainingTypes_NoTypes_ReturnsEmptyList() {
             // Given
-            when(trainingTypeRepository.findAll()).thenReturn(Collections.emptyList());
+            when(trainingTypeRepository.findAll()).thenReturn(List.of());
 
             // When
             List<TrainingType> result = trainingService.getAllTrainingTypes();
@@ -757,246 +770,18 @@ class TrainingServiceTest {
         }
 
         @Test
-        @DisplayName("Should return all available training types")
-        void getAllTrainingTypes_AllTypes() {
+        @DisplayName("Should delegate to repository")
+        void getAllTrainingTypes_DelegatesToRepository() {
             // Given
-            List<TrainingType> types = new ArrayList<>();
-            for (TrainingTypeName name : TrainingTypeName.values()) {
-                types.add(createTrainingType((long) name.ordinal(), name));
-            }
-            when(trainingTypeRepository.findAll()).thenReturn(types);
+            when(trainingTypeRepository.findAll()).thenReturn(List.of());
 
             // When
-            List<TrainingType> result = trainingService.getAllTrainingTypes();
+            trainingService.getAllTrainingTypes();
 
             // Then
-            assertThat(result).hasSize(TrainingTypeName.values().length);
-        }
-    }
-
-    @Nested
-    @DisplayName("Edge Cases Tests")
-    class EdgeCasesTests {
-
-        @Test
-        @DisplayName("Should handle training with minimum duration")
-        void createTraining_MinimumDuration() {
-            // Given
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("Quick Session")
-                    .trainingDate(LocalDate.now())
-                    .trainingDuration(1)
-                    .build();
-
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(testTrainer);
-            when(validator.validate(any(Training.class))).thenReturn(Collections.emptySet());
-            when(trainingRepository.save(any(Training.class))).thenReturn(testTraining);
-
-            // When
-            trainingService.createTraining(request);
-
-            // Then
-            verify(trainingRepository).save(trainingCaptor.capture());
-            assertThat(trainingCaptor.getValue().getTrainingDurationMinutes()).isEqualTo(1);
-        }
-
-        @Test
-        @DisplayName("Should handle training with long duration")
-        void createTraining_LongDuration() {
-            // Given
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("Marathon Session")
-                    .trainingDate(LocalDate.now())
-                    .trainingDuration(480) // 8 hours
-                    .build();
-
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(testTrainer);
-            when(validator.validate(any(Training.class))).thenReturn(Collections.emptySet());
-            when(trainingRepository.save(any(Training.class))).thenReturn(testTraining);
-
-            // When
-            trainingService.createTraining(request);
-
-            // Then
-            verify(trainingRepository).save(trainingCaptor.capture());
-            assertThat(trainingCaptor.getValue().getTrainingDurationMinutes()).isEqualTo(480);
-        }
-
-        @Test
-        @DisplayName("Should handle future training date")
-        void createTraining_FutureDate() {
-            // Given
-            LocalDate futureDate = LocalDate.now().plusMonths(3);
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("Future Session")
-                    .trainingDate(futureDate)
-                    .trainingDuration(60)
-                    .build();
-
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(testTrainer);
-            when(validator.validate(any(Training.class))).thenReturn(Collections.emptySet());
-            when(trainingRepository.save(any(Training.class))).thenReturn(testTraining);
-
-            // When
-            trainingService.createTraining(request);
-
-            // Then
-            verify(trainingRepository).save(trainingCaptor.capture());
-            assertThat(trainingCaptor.getValue().getTrainingDate()).isEqualTo(futureDate);
-        }
-
-        @Test
-        @DisplayName("Should handle multiple trainings for same trainee")
-        void getTraineeTrainings_MultipleTrainings() {
-            // Given
-            Training training2 = Training.builder()
-                    .id(2L)
-                    .trainee(testTrainee)
-                    .trainer(testTrainer)
-                    .trainingName("Evening Fitness")
-                    .trainingType(fitnessType)
-                    .trainingDate(LocalDate.of(2024, 3, 16))
-                    .trainingDurationMinutes(45)
-                    .build();
-
-            List<Training> trainings = List.of(testTraining, training2);
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
-
-            // When
-            List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, null, null);
-
-            // Then
-            assertThat(result).hasSize(2);
-        }
-
-        @Test
-        @DisplayName("Should filter trainings with partial trainer name match")
-        void getTraineeTrainings_PartialTrainerNameMatch() {
-            // Given
-            List<Training> trainings = new ArrayList<>(List.of(testTraining));
-
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(trainingRepository.findTrainingsWithAllUsers(
-                    eq("John.Doe"), isNull(), isNull(), isNull()))
-                    .thenReturn(trainings);
-
-            // When - partial match "ik" should match "Mike"
-            List<Training> result = trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, "ik", null);
-
-            // Then
-            assertThat(result).hasSize(1);
-        }
-
-        @Test
-        @DisplayName("Should handle training name with special characters")
-        void createTraining_SpecialCharactersInName() {
-            // Given
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("HIIT Training (Advanced) - Level 3!")
-                    .trainingDate(LocalDate.now())
-                    .trainingDuration(60)
-                    .build();
-
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(testTrainer);
-            when(validator.validate(any(Training.class))).thenReturn(Collections.emptySet());
-            when(trainingRepository.save(any(Training.class))).thenReturn(testTraining);
-
-            // When
-            trainingService.createTraining(request);
-
-            // Then
-            verify(trainingRepository).save(trainingCaptor.capture());
-            assertThat(trainingCaptor.getValue().getTrainingName())
-                    .isEqualTo("HIIT Training (Advanced) - Level 3!");
-        }
-    }
-
-    @Nested
-    @DisplayName("Authentication Tests")
-    class AuthenticationTests {
-
-        @Test
-        @DisplayName("createTraining should authenticate trainee")
-        void createTraining_AuthenticatesTrainee() {
-            // Given
-            AddTrainingRequest request = AddTrainingRequest.builder()
-                    .traineeUsername("John.Doe")
-                    .trainerUsername("Mike.Trainer")
-                    .trainingName("Test")
-                    .trainingDate(LocalDate.now())
-                    .trainingDuration(60)
-                    .build();
-
-            when(trainingMetrics.startTimer()).thenReturn(mockTimerSample);
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(traineeService.getByUsername("John.Doe")).thenReturn(testTrainee);
-            when(trainerService.getByUsername("Mike.Trainer")).thenReturn(testTrainer);
-            when(validator.validate(any(Training.class))).thenReturn(Collections.emptySet());
-            when(trainingRepository.save(any(Training.class))).thenReturn(testTraining);
-
-            // When
-            trainingService.createTraining(request);
-
-            // Then
-            verify(userService).isAuthenticated("John.Doe");
-        }
-
-        @Test
-        @DisplayName("getTraineeTrainingsByCriteria should authenticate user")
-        void getTraineeTrainings_AuthenticatesUser() {
-            // Given
-            doNothing().when(userService).isAuthenticated("John.Doe");
-            when(trainingRepository.findTrainingsWithAllUsers(any(), any(), any(), any()))
-                    .thenReturn(Collections.emptyList());
-
-            // When
-            trainingService.getTraineeTrainingsByCriteria(
-                    "John.Doe", null, null, null, null);
-
-            // Then
-            verify(userService).isAuthenticated("John.Doe");
-        }
-
-        @Test
-        @DisplayName("getTrainerTrainingsByCriteria should authenticate user")
-        void getTrainerTrainings_AuthenticatesUser() {
-            // Given
-            doNothing().when(userService).isAuthenticated("Mike.Trainer");
-            when(trainingRepository.findTrainingsWithAllUsers(any(), any(), any(), any()))
-                    .thenReturn(Collections.emptyList());
-
-            // When
-            trainingService.getTrainerTrainingsByCriteria(
-                    "Mike.Trainer", null, null, null);
-
-            // Then
-            verify(userService).isAuthenticated("Mike.Trainer");
+            verify(trainingTypeRepository, times(1)).findAll();
+            verifyNoInteractions(trainingRepository);
+            verifyNoInteractions(userService);
         }
     }
 }
